added a box to represent bondaries

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div id="block"></div>
+	<div id="box">
+		<div id="block"></div>
+	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="main.js"></script>
