--- a/1 moving square/index.html
+++ b/1 moving square/index.html
@@ -5,8 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div id="box">
-		<div id="block"></div>
+	<div id="container">
+		<div id="box">
+			<div id="block"></div>
+		</div>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
