--- a/2 snake/index.html
+++ b/2 snake/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test</title>
+	<title>Snake</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div id="container">
-		<div id="box">
-			
-		</div>
+		<div id="box"></div>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
